# interfere

./: .tldrsignore  AGENTS.md  CLAUDE.md  CONVENTIONS.md  MISSION.md  interlab-bhq-tune.sh  interlab-turboquant-tune.sh  pyproject.toml
.claude-plugin/: plugin.json
benchmarks/: code_correctness.py  flashmoe_cache_sweep.sh  holistic_benchmark.py  layerskip_benchmark.py  model_benchmark.py  results_122b.tsv  results_20260329_013748.tsv  results_20260329_090725.tsv  results_397b.tsv
benchmarks/prompts/: coding_eval.json  holistic_eval.json
benchmarks/suites/: livecodebench.py
docs/: interfere-prd.md  interfere-vision.md
docs/benchmarks/: 2026-04-05-qwen35-122b-a10b.md  20260326-093909-Qwen3.5-35B-A3B-4bit.json  20260326-121650-Qwen3.5-122B-A10B-4bit-spec3.json  20260326-121829-Qwen3.5-122B-A10B-4bit-spec5.json  20260326-122530-Qwen3.5-35B-A3B-4bit-spec3.json  20260326-122611-Qwen3.5-122B-A10B-4bit-spec3.json  20260326-122700-Qwen3.5-122B-A10B-4bit-spec5.json  20260326-122743-Qwen3.5-122B-A10B-4bit-spec2.json  20260326-122848-Qwen3.5-0.8B-OptiQ-4bit.json
docs/plans/: 2026-03-26-turboquant.md  (+5 more)
scripts/: interlab-reservoir-tune.sh  run_lcb_matrix.sh
server/: __main__.py  benchmark.py  benchmark_cli.py  cascade.py  flashmoe_worker.py  inference.py  main.py  mcp.py  metal_worker.py  prompt_cache.py  quality.py  shadow_log.py
tests/: test_benchmark.py  test_cascade.py  test_experiment_config.py  test_flashmoe_worker.py  test_prompt_cache.py  test_quality.py  test_reservoir_routing.py  test_server.py  test_shadow_log.py  test_training_data.py  test_turbo_quant.py
(+24 files in other folders)
