[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interfere"
version = "0.1.0"
description = "Local MLX-LM inference server for Sylveste"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.22.0",
    "mlx-lm>=0.22.0",
    "starlette>=0.40.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.build.targets.editable]
packages = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
